sumo/tests/sumo/extended/wauts/errors/cross3ltl_error_missing_wautid/errors.sumo
Error: Missing id of a 'WAUT'-object.
Quitting (on error).
